--- a/PRAKTIKUM02/Soft/Praktikum02/Praktikum02.MovieApp/Components/Layout/NavMenu.razor
+++ b/PRAKTIKUM02/Soft/Praktikum02/Praktikum02.MovieApp/Components/Layout/NavMenu.razor
@@ -14,6 +14,10 @@
             </NavLink>
         </div>
 
+        <NavLink class="nav-link" href="movies" Match="NavLinkMatch.Prefix">
+            <span class="bi bi-film" aria-hidden="true"></span> Movies
+        </NavLink>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
